--- a/mypy.ini
+++ b/mypy.ini
@@ -1,20 +1,44 @@
 [mypy]
-warn_return_any = True
-warn_unused_configs = True
+python_version = 3.12
+plugins =
+  sqlalchemy.ext.mypy.plugin,
+  pydantic.mypy
+mypy_path = src
+namespace_packages = true
+explicit_package_bases = true
 
-disallow_untyped_defs = True
-disallow_incomplete_defs = True
-disallow_any_explicit = True
-disallow_any_unimported = True
-strict = True
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
 
-plugins = pydantic.mypy
+disallow_any_unimported = true
+disallow_any_expr = true
+disallow_any_decorated = true
+disallow_any_generics = true
+disallow_any_explicit = true
+
+disallow_subclassing_any = true
+
+strict = true
+
+warn_return_any = true
+warn_unused_ignores = true
+warn_unused_configs = true
+
+strict_optional = true
 
 [pydantic-mypy]
-init_forbid_extra = True
-init_typed = True
-warn_required_dynamic_aliases = True
-warn_untyped_fields = True
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
+warn_untyped_fields = true
+
+[mypy-tests.*]
+disable_error_code =
+  call-arg
+
+[mypy-src.tsa.database.models.*]
+disable_error_code =
+  name-defined
 
 [mypy-statsmodels.*]
-ignore_missing_imports = True
+ignore_missing_imports = true
