--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "chardet>=5.2.0",
     "click>=8.3.0",
     "httpx>=0.28.1",
     "matplotlib>=3.10.7",
